force-app/main/default/objects/Demographic_Data__c/Demographic_Data__c.object-meta.xml
<CustomObject>
    <description>Census and demographic data per PIN code area. Used by the Expansion Strategy Agent for demand scoring.</description>
    <label>Demographic Data</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demographic Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>