force-app/main/default/objects/Demographic_Data__c/fields/Avg_Daily_Footfall__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_Footfall__c</fullName>
    <label>Avg Daily Footfall</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>