force-app/main/default/objects/Demographic_Data__c/fields/Avg_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Avg_Household_Income__c</fullName>
    <label>Avg Household Income (INR/year)</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>