force-app/main/default/objects/Demographic_Data__c/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <description>Source of this data (e.g., Census 2021, NSSO, CRISIL).</description>
    <label>Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>