force-app/main/default/objects/Demographic_Data__c/fields/Growth_Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Growth_Rate_Pct__c</fullName>
    <label>Population Growth Rate %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>