force-app/main/default/objects/Demographic_Data__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <label>Last Updated</label>
    <type>Date</type>
</CustomField>