force-app/main/default/objects/Demographic_Data__c/fields/Retail_Spend_Index__c.field-meta.xml
<CustomField>
    <fullName>Retail_Spend_Index__c</fullName>
    <description>Index of average retail spending relative to city average (100 = city avg).</description>
    <label>Retail Spend Index</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>