force-app/main/default/objects/Demographic_Data__c/fields/Working_Professional_Pct__c.field-meta.xml
<CustomField>
    <fullName>Working_Professional_Pct__c</fullName>
    <label>Working Professional %</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>