force-app/main/default/objects/Demographic_Data__c/fields/Youth_Pct__c.field-meta.xml
<CustomField>
    <fullName>Youth_Pct__c</fullName>
    <label>Youth Population % (18-35)</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>